# twidl

./: .gitignore  LICENSE  README.md  setup.cfg
app/: main.py
app/static/: jquery-3.4.1.min.js
app/templates/: _layout_.html  index.html
conf.default/: apikeys.json
src/: get-tweets.py
