[metadata]
name = twidl
version = 0.1.0
url = https://github.com/masaharu-kato/twidl
author = Masaharu Kato
author_email = fudai.mk@gmail.com
license_file = LICENSE
description = Twitter tweets downloader
long_description = file: README.md

[options]
zip_safe = False
package_dir = 
    = app
packages = find:
include_package_data = True
install_requires =
    requests
    request-oauthlib
setup_requires = 
    pytest-runner
tests_require = 
    pytest
    pytest-cov
entry_points = file: entry_points.cfg

[options.extras_require]
dev =
    pytest
    pylint
    mypy

[aliases]
test = pytest
